{ADD] révision à chaud and update TP3